# autodidax

./: pyproject.toml
autodidax/: __init__.py  practice.py
